@@ -22,21 +22,22 @@ import (
 	"fmt"
 	"strings"
 
-	"github.com/cgrates/cgrates/config"
 	"github.com/cgrates/cgrates/engine"
 	"github.com/cgrates/cgrates/utils"
 )
 
 func (m *Migrator) migrateCurrentCharger() (err error) {
 	var ids []string
-	tenant := config.CgrConfig().GeneralCfg().DefaultTenant
 	ids, err = m.dmIN.DataManager().DataDB().GetKeysForPrefix(utils.ChargerProfilePrefix)
 	if err != nil {
 		return err
 	}
 	for _, id := range ids {
-		idg := strings.TrimPrefix(id, utils.ChargerProfilePrefix+tenant+":")
-		cpp, err := m.dmIN.DataManager().GetChargerProfile(tenant, idg, false, false, utils.NonTransactional)
+		tntID := strings.SplitN(strings.TrimPrefix(id, utils.ChargerProfilePrefix), utils.InInFieldSep, 2)
+		if len(tntID) < 2 {
+			return fmt.Errorf("Invalid key <%s> when migrating chargers", id)
+		}
+		cpp, err := m.dmIN.DataManager().GetChargerProfile(tntID[0], tntID[1], false, false, utils.NonTransactional)
 		if err != nil {
 			return err
 		}
@@ -46,8 +47,8 @@ func (m *Migrator) migrateCurrentCharger() (err error) {
 		if err := m.dmOut.DataManager().SetChargerProfile(cpp, true); err != nil {
 			return err
 		}
-		if err := m.dmIN.DataManager().RemoveChargerProfile(tenant,
-			idg, utils.NonTransactional, false); err != nil {
+		if err := m.dmIN.DataManager().RemoveChargerProfile(tntID[0],
+			tntID[1], utils.NonTransactional, false); err != nil {
 			return err
 		}
 		m.stats[utils.Chargers] += 1
